[package]
name = "py-geo-rasterize"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "geo_rasterize"
crate-type = ["cdylib"]

[dependencies]
# we depend on 3.7+ because 3.6 just went EOL
pyo3 = { version = "0.15", features = ["extension-module", "anyhow", "abi3-py37"] }
geo-rasterize = {path = "../geo-rasterize"}
numpy = "0.15"
geo-types = "0.7.2"
ndarray = "0.15.3"
wkb = "0.7.1"
anyhow = "1.0.42"

