[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "geo-rasterize"
version = "0.7.0"
description = "a 2D rasterizer for geospatial applications, written in Rust"
readme = "README.md"
license = {file = "LICENSE-APACHE"}
keywords = ["geospatial", "gis", "geo", "raster", "geographic"]
authors = [{name = "Michael Salib", email = "msalib@gmail.com"}]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 4 - Beta",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"]
dependencies = [
    "numpy>=1.16",
    "shapely>=1.6"]
homepage = "https://github.com/msalib/py-geo-rasterize"


[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:project.version"
upload_to_pypi = false
upload_to_repository = false
upload_to_release = false